examples/passing/gateway-not-attached/gateway-other.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: some-other-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
